@@ -1,3 +1,8 @@
+2014-10-10  David B. Lamkins  <david@lamkins.net>
+
+	* aplwrap.c (do_search, search_key_press_event, search_changed)
+	(key_press_event, main): Implement search in transcript.
+
 2014-10-09  David B. Lamkins  <david@lamkins.net>
 
 	* aplwrap.c (home_to_end_of_apl_prompt, advance_by_apl_prompt)
